--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body style="align-items: center; text-align: center; margin-bottom: 100px;">
     <h1><a>💗</a>supercalifragilisticexpialidocious dog<a>💗</a></h1>
-    <p><img style="width: 80%; height: auto; margin: 20px,100px" src="src/assets/m-dog.jpg" alt="A dog walking outside."/></p>
+    <p><img style="width: 80%; height: auto; margin: 20px,100px" src="src/assets/m-dog.JPG" alt="A dog walking outside."/></p>
     <section class="buttons">
         <button id="b0" onclick="audio()">🤧</button>
         <button id="b1" onclick="audio()">🥹</button>
