--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             width: 100px;
             height: 100px;
             font-size: 80px;
+            text-align: center;
+            padding: 5px;
             background-color: powderblue;
             border-radius: 20%;
             border-color: lightpink;
