add new voice and replace olds

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <source class="shun" src="./assets/voices/くしゃみ.mp3" type="audio/mp3">
         </audio>
         <audio>
-            <source class="shun" src="./assets/voices/スーン.mp3" type="audio/mp3">
+            <source class="shun" src="./assets/voices/しゅん.mp3" type="audio/mp3">
         </audio>
         <audio>
             <source class="shun" src="./assets/voices/寝息.mp3" type="audio/mp3">
